rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__multi_fact__multi_fact_measure_filter_on_second_fact.snap
---
source: cubesqlplanner/src/tests/integration/multi_fact.rs
expression: result
---
customers__name | orders__count | returns__count
----------------+---------------+---------------
Bob             | 3             | 2             
Charlie         | 0             | 2
