rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__multi_fact__multi_fact_totals_no_dimensions.snap
---
source: cubesqlplanner/src/tests/integration/multi_fact.rs
expression: result
---
orders__count | orders__total_amount | returns__count | returns__total_refund
--------------+----------------------+----------------+----------------------
8             | 1375.00              | 5              | 330.00
