rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__multi_fact__multi_fact_view_two_facts_with_measure_filter.snap
---
source: cubesqlplanner/src/tests/integration/multi_fact.rs
expression: result
---
activity__date_id | activity__impressions_total_clicks
------------------+-----------------------------------
1                 | 30                                
2                 | 30                                
3                 | 40
