rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__multi_fact__multiplied_aggregate_filtered_count_on_pk.snap
---
source: cubesqlplanner/src/tests/integration/multi_fact.rs
expression: result
---
orders__status | customers__active_count
---------------+------------------------
completed      | 1                      
pending        | 1                      
NULL           | 0
