rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__multi_fact__multiplied_aggregate_with_measure_subquery.snap
---
source: cubesqlplanner/src/tests/integration/multi_fact.rs
expression: result
---
orders__status | customers__total_lifetime_value_for_east
---------------+-----------------------------------------
completed      | 4500.00                                 
pending        | 3000.00                                 
NULL           | NULL
