rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__multi_fact__multiplied_full_combo.snap
---
source: cubesqlplanner/src/tests/integration/multi_fact.rs
expression: result
---
customers__name | customers__created_at_month | orders__count | returns__count
----------------+-----------------------------+---------------+---------------
Alice           | 2025-01-01 00:00:00         | 2             | 1             
Diana           | 2025-03-01 00:00:00         | 1             | 0
